ffmpegfs NEWS

Important changes in 1.1 (2017-12-XX)

Changes in this release:
* Add --videoheight=HEIGHT and --videowidth=WIDTH parameters to allow
  video size change. If source video is larger it will be scaled down.
  If already smaller the size will be left as is. You should only set
  one parameter, if both are set the aspect ratio may be changed and the
  result look strange.

nschlia@oblivion-software.de

Important changes in 1.00 (2018-01-19)

Changes in this release:
* Cheers! Made it! This is release version 1.0, the first production release.
* Fixed compile for FFmpeg versions prior to 3.0.

nschlia@oblivion-software.de

Important changes in 0.95 (2017-12-29)

NOTE: The cache format has changed and is not compatible with prior versions.
      Please do a "rm -Rf /tmp/ffmpegfs" before starting this version to
      create a new cache.
TODO: see new TODO file from now on.

Changes in this release:
* Heureka! This is the first beta release towards V1.0. From now on only bug
  fixes will go into the code.
* Implemented automatic cache maintenance (ensure cache size, disk space, delete
  outdated entries).
* Fixed checks ("make checks" works now. Known problem: mp4 sizes seem to differ
  when using different FFmpeg releases. Will be addressed soon.).
* Fixed mp3 format (The mp3s were completely braindead.).
* Fixed suspend timeout coming although file currently accessed.
* Fixed crash during shutdown because sqlite was used too late.
* Fixed handling of multiple destination types in same cache.
* Properly pass on errno/save and store in cache database.
* Additional database fields for target parameters (bitrate, error code etc.).
  Will be used in later versions to detect if a file needs re-transcoding.
* Files will be recoded if source file changes (size or timestamp).
* Report compiler version when run with -v parameter.
* Set gcc optimisation higer (now -o3).

nschlia@oblivion-software.de

Important changes in 0.94 (2017-12-19)

Changes in this release: